compiler/crates/types/tests/typeerr/narrowing_escape.th
ให้ ค่า: ตัวเลข | ข้อความ = "hi";
ถ้า (ค่า เป็น ข้อความ) {
    ระบบ.แสดง(ค่า);
}
ให้ s: ข้อความ = ค่า;
